Adjust spacing of header to be more responsive and refactor to avoid duplicate css

--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ header {
 .username {
   color: white;
   font-size: 12px;
-  padding-right: 10px;
+  padding-right: 1em;
   text-align: right;
 }
 
@@ -33,13 +33,13 @@ ul {
 }
 
 .nav-item {
-  margin: 10px;
+  margin: .7em;
 }
 
 @media screen and (max-width: 800px) {
   .username {
     text-align: left;
-    padding-left: 15px;
+    padding-left: 1.2em;
   }
   ul {
     flex-direction: column;
@@ -47,8 +47,8 @@ ul {
 
   .nav-item {
     align-self: flex-start;
-    margin: 5px;
-    margin-left: -20px;
+    margin: .4em;
+    margin-left: -2em;
   }
 
   #logo {
@@ -64,51 +64,45 @@ a {
 /* ----- Card Grid Section ----- */
 
 main {
-  padding-right: 15px;
-  padding-left: 15px;
+  padding-right: 1em;
+  padding-left: 1em;
 }
 
 h1 {
-  padding-top: 15px;
-  padding-bottom: 15px;
+  padding-top: .5em;
+  padding-bottom: .5em;
   font-size: 32px;
   color: #2a49b8;
   text-shadow: 1px 1px black;
 }
 
-@media screen and (max-width: 674px) {
+.all-beer-cards {
+  margin: .7em;
+  grid-gap: .7em;
+  display: grid;
+}
+
+@media screen and (max-width: 649px) {
   .all-beer-cards {
-    margin: 10px;
-    display: grid;
     grid-template-columns: 1fr;
-    grid-gap: 10px;
   }
 }
 
-@media screen and (min-width: 675px) and (max-width: 949px) {
+@media screen and (min-width: 650px) and (max-width: 949px) {
   .all-beer-cards {
-    margin: 10px;
-    display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-gap: 10px;
   }
 }
 
 @media screen and (min-width: 950px) and (max-width: 1219px) {
   .all-beer-cards {
-    margin: 10px;
-    display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-gap: 10px;
   }
 }
 
 @media screen and (min-width: 1220px) {
   .all-beer-cards {
-    margin: 10px;
-    display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-gap: 10px;
   }
 }
 
